src/objects/Deposition_Location__c.object
<CustomObject>
    <fields>
        <fullName>Account_of_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account of Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposition Locations</relationshipLabel>
        <relationshipName>Deposition_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connect_Via__c</fullName>
        <label>Connect Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Streaming</fullName>
                </value>
                <value>
                    <fullName>Videoconferencing</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Device - Streaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <formula>Deposition__r.Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Equipment_Unique__c</fullName>
        <label>Deposition Equipment Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deposition_Room_Unique__c</fullName>
        <label>Deposition Room Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipLabel>Deposition Locations</relationshipLabel>
        <relationshipName>Deposition_Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Equipment_To_Ship__c</fullName>
        <label>Equipment To Ship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Needs To Ship</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Kit Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit 1</fullName>
                </value>
                <value>
                    <fullName>Kit 2</fullName>
                </value>
                <value>
                    <fullName>Kit 3</fullName>
                </value>
                <value>
                    <fullName>Kit 4</fullName>
                </value>
                <value>
                    <fullName>Kit 5</fullName>
                </value>
                <value>
                    <fullName>Kit 6</fullName>
                </value>
                <value>
                    <fullName>Kit 7</fullName>
                </value>
                <value>
                    <fullName>Kit 8</fullName>
                </value>
                <value>
                    <fullName>Kit 9</fullName>
                </value>
                <value>
                    <fullName>Kit 10</fullName>
                </value>
                <value>
                    <fullName>Kit 11</fullName>
                </value>
                <value>
                    <fullName>Kit 12</fullName>
                </value>
                <value>
                    <fullName>Kit 13</fullName>
                </value>
                <value>
                    <fullName>Kit 14</fullName>
                </value>
                <value>
                    <fullName>Kit 15</fullName>
                </value>
                <value>
                    <fullName>Kit 16</fullName>
                </value>
                <value>
                    <fullName>Kit 17</fullName>
                </value>
                <value>
                    <fullName>Kit 18</fullName>
                </value>
                <value>
                    <fullName>Kit 19</fullName>
                </value>
                <value>
                    <fullName>Kit 20</fullName>
                </value>
                <value>
                    <fullName>Kit 21</fullName>
                </value>
                <value>
                    <fullName>Kit 22</fullName>
                </value>
                <value>
                    <fullName>Kit 23</fullName>
                </value>
                <value>
                    <fullName>Kit 24</fullName>
                </value>
                <value>
                    <fullName>Kit 25</fullName>
                </value>
                <value>
                    <fullName>Kit 26</fullName>
                </value>
                <value>
                    <fullName>Kit 27</fullName>
                </value>
                <value>
                    <fullName>Kit 28</fullName>
                </value>
                <value>
                    <fullName>Kit 29</fullName>
                </value>
                <value>
                    <fullName>Kit 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibits_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhibits Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Testing_Notes__c</fullName>
        <formula>Account_of_Location__r.Facility_Testing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Testing Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Room_Value__c</fullName>
        <inlineHelpText>This field is used in trigger code only. This field has a random number if the room is blank, and actual field value this ensures, that we can have blank values in the Room and still maintain uniqueness</inlineHelpText>
        <label>Hidden Room Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Attorney__c</fullName>
        <label>Hiring Attorney</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Firm__c</fullName>
        <label>Hiring Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Who is using the room</description>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Technician__c</fullName>
        <label>Onsite Technician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Tracking__c</fullName>
        <label>Return Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>nextgen 1</fullName>
                </value>
                <value>
                    <fullName>nextgen 2</fullName>
                </value>
                <value>
                    <fullName>nextgen 3</fullName>
                </value>
                <value>
                    <fullName>nextgen 4</fullName>
                </value>
                <value>
                    <fullName>nextgen 5</fullName>
                </value>
                <value>
                    <fullName>nextgen 6</fullName>
                </value>
                <value>
                    <fullName>nextgen 7</fullName>
                </value>
                <value>
                    <fullName>nextgen 8</fullName>
                </value>
                <value>
                    <fullName>nextgen 9</fullName>
                </value>
                <value>
                    <fullName>nextgen10</fullName>
                </value>
                <value>
                    <fullName>nextgen 11</fullName>
                </value>
                <value>
                    <fullName>nextgen 12</fullName>
                </value>
                <value>
                    <fullName>nextgen 13</fullName>
                </value>
                <value>
                    <fullName>nextgen 14</fullName>
                </value>
                <value>
                    <fullName>nextgen 15</fullName>
                </value>
                <value>
                    <fullName>nextgen 16</fullName>
                </value>
                <value>
                    <fullName>nextgen 17</fullName>
                </value>
                <value>
                    <fullName>nextgen 18</fullName>
                </value>
                <value>
                    <fullName>nextgen 19</fullName>
                </value>
                <value>
                    <fullName>nextgen 20</fullName>
                </value>
                <value>
                    <fullName>nextgen 21</fullName>
                </value>
                <value>
                    <fullName>nextgen 22</fullName>
                </value>
                <value>
                    <fullName>nextgen 23</fullName>
                </value>
                <value>
                    <fullName>nextgen 24</fullName>
                </value>
                <value>
                    <fullName>nextgen 25</fullName>
                </value>
                <value>
                    <fullName>nextgen 26</fullName>
                </value>
                <value>
                    <fullName>nextgen 27</fullName>
                </value>
                <value>
                    <fullName>nextgen 28</fullName>
                </value>
                <value>
                    <fullName>nextgen 29</fullName>
                </value>
                <value>
                    <fullName>nextgen 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <label>Shipping Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPS_Tracking_Number__c</fullName>
        <externalId>true</externalId>
        <label>Outbound Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Deposition Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Room__c</columns>
        <columns>Deposition__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposition_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Depositions</label>
    </listViews>
    <listViews>
        <fullName>All_Depositions</fullName>
        <columns>NAME</columns>
        <columns>Deposition_Date__c</columns>
        <columns>Room__c</columns>
        <columns>Deposition__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Depositions</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Deposition__c</columns>
        <columns>Equipment__c</columns>
        <columns>Location_Address__c</columns>
        <columns>Tested__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Equipment__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned Equipment</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposition Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>